footer fixes: fonts, email. Select menu overflow-y

--- a/src/components/ArtCard/styles.module.scss
+++ b/src/components/ArtCard/styles.module.scss
@@ -5,6 +5,7 @@
   border: 1px solid $color-neutral-20;
   width: 100%;
   max-width: 500px;
+  min-width: 250px;
   max-height: 500px;
   margin: 0 auto;
   height: 100%;
